[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
stunclient = "0.4"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
rand        = "0.8"
ring        = "0.17"
anyhow = "1"
async-channel = "2"
bytes = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.15.3"
opus = "0.3"
ringbuf = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "local-time", "env-filter"] }
tracing-appender = "0.2"
webrtc-audio-processing = "0.3"
parking_lot = "0.12"
